--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -10,11 +10,15 @@
 .logo-container {
   width: 60px;
   height: 60px;
-  background: #fff;
+  background: rgb(242, 236, 236);
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 50%;
+  img {
+    width: 60px;
+    height: 60px;
+  }
 }
 
 .header-navigation {
